make some internal vars with private parttern

--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/defaults/main.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/defaults/main.yml
@@ -5,7 +5,7 @@
 role_name: ansible-podman-rootless-play
 
 # podman_host:
-defaults_podman_host: "{{ ansible_host }}"
+defaults_podman_host: "{{ inventory_hostname }}"
 
 podman_host: "{{ vars_podman_host | default(defaults_podman_host) }}"
 
@@ -41,7 +41,7 @@ podman_volume: "{{ defaults_podman_volume | ansible.builtin.combine(vars_podman_
 defaults_podman_play:
   state: # required, skip if empty
   kube_file: 
-    host: # hostname of the host where kube file place in, 
+    host: "{{ inventory_hostname }}" # hostname of the host where kube file place in, 
     path: # path to the kube file, if empty, podman play process will skip 
 
 podman_play: "{{ defaults_podman_play | ansible.builtin.combine(vars_podman_play, recursive=True) }}"
