--- a/AnsibleWorkShop/project/Initialize-Vault.yml
+++ b/AnsibleWorkShop/project/Initialize-Vault.yml
@@ -1,4 +1,11 @@
 # code: language=ansible
+# podman run --rm `
+#     --dns 192.168.255.31 `
+#     -e RUNNER_PLAYBOOK=Initialize-Vault.yml `
+#     -e ANSIBLE_DISPLAY_SKIPPED_HOSTS=False `
+#     -v ../:/runner `
+#     -v ../../KubeWorkShop/:/KubeWorkShop/ `
+#    localhost/ansible-ee-aio ansible-runner run /runner -vv
 ---
 - hosts: localhost
   gather_facts: false
