--- a/AnsibleWorkShop/project/Deploy-VaultInPodman.yml
+++ b/AnsibleWorkShop/project/Deploy-VaultInPodman.yml
@@ -1,4 +1,10 @@
 # code: language=ansible
+# podman run --rm `
+#     -e RUNNER_PLAYBOOK=Deploy-VaultInPodman.yml `
+#     -e ANSIBLE_DISPLAY_SKIPPED_HOSTS=False `
+#     -v ../:/runner `
+#     -v ../../KubeWorkShop/:/KubeWorkShop/ `
+#    localhost/ansible-ee-aio ansible-runner run /runner -vv
 ---
 - hosts: localhost # kube-2
   gather_facts: false
