update key file path

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -12,7 +12,7 @@ Host vyos
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
     PasswordAuthentication no
-    IdentityFile ~/.vagrant.d/insecure_private_key
+    IdentityFile ~/.ssh/vagrant
     IdentitiesOnly yes
     LogLevel FATAL
 
