add dnf upgrade post process

--- a/PackerWorkShop/Fedora/http/ks-fedora38.cfg
+++ b/PackerWorkShop/Fedora/http/ks-fedora38.cfg
@@ -13,6 +13,7 @@ rootpw root
 timezone Asia/Shanghai
 
 # https://docs.fedoraproject.org/en-US/fedora/f36/install-guide/appendixes/Kickstart_Syntax_Reference/#sect-kickstart-commands-text
+# https://pykickstart.readthedocs.io/en/latest/kickstart-docs.html#chapter-6-post-installation-script
 text
 
 # user --name=vagrant --homedir=/home/vagrant --password=vagrant
@@ -52,4 +53,10 @@ poweroff
 @core
 @cloud-server # dnf group info "Cloud Server Tools"
 hyperv-daemons
+%end
+
+# https://pykickstart.readthedocs.io/en/latest/kickstart-docs.html#chapter-6-post-installation-script
+%post
+dnf update
+dnf upgrade -y
 %end
