add centos host

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -16,7 +16,7 @@ Host vyos
     IdentitiesOnly yes
     LogLevel FATAL
 
-Host InfSvc-oSLMicro
+Host InfSvc-CentOS
     StrictHostKeyChecking no
     HostName 192.168.255.11
     User vagrant
