--- a/AnsibleWorkShop/inventory/AIO.yml
+++ b/AnsibleWorkShop/inventory/AIO.yml
@@ -16,7 +16,7 @@ sololab:
       ansible_user: vagrant
       ansible_host: localhost
       ansible_python_interpreter: /usr/bin/python3
-      ansible_ssh_private_key_file:  ~/.ssh/vagrant
+      # ansible_ssh_private_key_file: ~/.ssh/vagrant
     kube-1:
       ansible_user: vagrant
       # https://riptutorial.com/ansible/example/5733/inventory-with-username-and-password
@@ -28,8 +28,8 @@ sololab:
       ansible_user: vagrant
       # https://riptutorial.com/ansible/example/5733/inventory-with-username-and-password
       ansible_ssh_pass: vagrant
-      ansible_host: 192.168.255.21
-      # ansible_python_interpreter: /usr/bin/python3
+      ansible_host: 192.168.255.11
+      ansible_python_interpreter: /usr/bin/python3
       # ansible_ssh_private_key_file:  ~/.ssh/vagrant
     kube-3:
       ansible_user: vagrant
