--- a/AnsibleWorkShop/builder/context/Containerfile
+++ b/AnsibleWorkShop/builder/context/Containerfile
@@ -85,7 +85,7 @@ ARG TERRAFORM_VERSION=1.4.6
 RUN cd /tmp && curl -LO https://releases.hashicorp.com/terraform/$TERRAFORM_VERSION/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && install -o root -g root -m 0755 terraform /usr/local/bin/terraform
 RUN curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl && ls -al /usr/local/bin/kubectl && chmod 0755 /usr/local/bin/kubectl
 RUN curl -L https://mirror.openshift.com/pub/openshift-v4/clients/helm/latest/helm-linux-amd64 -o /usr/local/bin/helm && chmod +x /usr/local/bin/helm
-RUN export HTTPS_PROXY=${PROXY} && export HTTP_PROXY=${PROXY} && export https_proxy=${PROXY} && export http_proxy=${PROXY} && /usr/local/bin/helm plugin install https://github.com/databus23/helm-diff && unset HTTPS_PROXY && unset HTTP_PROXY && unset https_proxy && unset http_proxy
+RUN /usr/local/bin/helm plugin install https://github.com/databus23/helm-diff
 RUN rm -rf /output
 LABEL ansible-execution-environment=true
 USER 1000
