--- a/AnsibleWorkShop/runner/project/Deploy-TraefikInPodman.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-TraefikInPodman.yml
@@ -6,7 +6,7 @@
     ipa:
       hostname: ipa.infra.sololab
     
-    kube_file_template: /KubeWorkShop/Traefik/aio-traefik.yaml
+    # kube_file_template: /KubeWorkShop/Traefik/aio-traefik.yaml
 
     podman_rootless_play:
       vars_podman_host: kube-1
@@ -19,8 +19,7 @@
         timeout: 600
         kube_file: 
           host: localhost
-          # path: /KubeWorkShop/Traefik/aio-traefik.yaml
-          content: "{{ rendered }}"
+          content: "{{ lookup('ansible.builtin.template', '/KubeWorkShop/Traefik/aio-traefik-cloud.yaml') }}"
         absent:
           query_params:
             force: true
@@ -69,22 +68,22 @@
           ansible.builtin.set_fact:
             Root_CA_Cert: "{{ RootCACert.stdout }}"
 
-    - name: Prepare kube_file content
-      when:
-        - Root_CA_Cert is defined
-      block:
-        - name: Render kube file content
-          ansible.builtin.template:
-            src: "{{ kube_file_template }}"
-            dest: /dev/null
-          check_mode: true
-          diff: true
-          no_log: false
-          register: template
+    # - name: Prepare kube_file content
+    #   when:
+    #     - Root_CA_Cert is defined
+    #   block:
+    #     - name: Render kube file content
+    #       ansible.builtin.template:
+    #         src: "{{ kube_file_template }}"
+    #         dest: /dev/null
+    #       check_mode: true
+    #       diff: true
+    #       no_log: false
+    #       register: template
 
-        - name: Set fact rendered
-          ansible.builtin.set_fact:
-            rendered: "{{ template.diff[0].after }}"
+    #     - name: Set fact rendered
+    #       ansible.builtin.set_fact:
+    #         rendered: "{{ template.diff[0].after }}"
 
     - name: Invoke podman-rootless-play
       ansible.builtin.include_role:
